# ModelRailroadTimetablePlanner

./: .clang-format  .gitignore  .gitignore-blame  BUILDING.md  CHANGELOG  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.md  README  README.md  README_it.md  TODO
src/: CMakeLists.txt
src/app/: CMakeLists.txt  info.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  propertiesdialog.cpp  propertiesdialog.h  scopedebug.cpp  scopedebug.h  session.cpp  session.h
src/backgroundmanager/: CMakeLists.txt  backgroundmanager.cpp  backgroundmanager.h  backgroundresultpanel.cpp  backgroundresultpanel.h  backgroundresultwidget.cpp  backgroundresultwidget.h  ibackgroundchecker.cpp  ibackgroundchecker.h
src/db_metadata/: CMakeLists.txt  imagemetadata.cpp  imagemetadata.h  meetinginformationdialog.cpp  meetinginformationdialog.h  meetinginformationdialog.ui  metadatamanager.cpp  metadatamanager.h
src/e656_net/: CMakeLists.txt  e656importdlg.cpp  e656importdlg.h  e656netimporter.cpp  e656netimporter.h  jobstopsimporter.cpp  jobstopsimporter.h
src/e656_net/model/: e656_utils.h  e656stationmodel.cpp  e656stationmodel.h
src/graph/: CMakeLists.txt  backgroundhelper.cpp  backgroundhelper.h  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  graphicsview.h  graphmanager.cpp  graphmanager.h  hourpane.cpp  hourpane.h  linegraphtypes.cpp  linegraphtypes.h  stationlayer.cpp  stationlayer.h
src/graph/model/: CMakeLists.txt  linegraphmanager.cpp  linegraphmanager.h  linegraphscene.cpp  linegraphscene.h  linegraphselectionhelper.cpp  linegraphselectionhelper.h  stationgraphobject.cpp  stationgraphobject.h
src/graph/view/: CMakeLists.txt  backgroundhelper.cpp  backgroundhelper.h  hourpanel.cpp  hourpanel.h  linegraphscrollarea.cpp  linegraphscrollarea.h  linegraphselectionwidget.cpp  linegraphselectionwidget.h  linegraphtoolbar.cpp  linegraphtoolbar.h  linegraphview.cpp  linegraphview.h  linegraphviewport.cpp  linegraphviewport.h  linegraphwidget.cpp  linegraphwidget.h  stationlabelsheader.cpp  stationlabelsheader.h
src/jobs/: CMakeLists.txt  jobssqlmodel.cpp  jobssqlmodel.h  jobstorage.cpp  jobstorage.h  traingraphics.cpp  traingraphics.h
src/jobs/jobeditor/: CMakeLists.txt  editstopdialog.cpp  editstopdialog.h  editstopdialog.ui  jobpatheditor.cpp  jobpatheditor.h  jobpatheditor.ui  rscoupledialog.cpp  rscoupledialog.h  stopdelegate.cpp  stopdelegate.h  stopeditinghelper.cpp  stopeditinghelper.h  stopeditor.cpp  stopeditor.h
src/jobs/jobs_checker/: CMakeLists.txt
src/jobs/jobsmanager/: CMakeLists.txt  jobsmanager.cpp  jobsmanager.h  newjobsamepathdlg.cpp  newjobsamepathdlg.h
src/lines/: CMakeLists.txt  helpers.cpp  helpers.h  lineobj.cpp  lineobj.h  linesmatchmodel.cpp  linessqlmodel.cpp  linessqlmodel.h  linestorage.cpp  linestorage.h
src/odt_export/: CMakeLists.txt  jobsheetexport.cpp  jobsheetexport.h  sessionrsexport.cpp  sessionrsexport.h  shiftsheetexport.cpp  shiftsheetexport.h  stationsheetexport.cpp  stationsheetexport.h
src/odt_export/common/: CMakeLists.txt  jobwriter.cpp  jobwriter.h  odtdocument.cpp  odtdocument.h  odtutils.cpp  odtutils.h  sessionrswriter.cpp  sessionrswriter.h  stationwriter.cpp  stationwriter.h
src/printing/: CMakeLists.txt  fileoptionspage.cpp  fileoptionspage.h  pdfoptionspage.ui  printdefs.h  printeroptionspage.cpp  printeroptionspage.h  printoptionspage.cpp  printoptionspage.h  printwizard.cpp  printwizard.h  printworker.cpp  printworker.h  printworkerhandler.cpp  progresspage.cpp  progresspage.h  sceneselectionmodel.cpp  sceneselectionmodel.h  selectionpage.cpp  selectionpage.h
src/printing/helper/: CMakeLists.txt
src/printing/wizard/: CMakeLists.txt  printoptionspage.cpp  printoptionspage.h  printwizard.h  (+7 more)
src/rollingstock/: CMakeLists.txt  rollingstockmatchmodel.cpp  rollingstockmatchmodel.h  rollingstocksqlmodel.cpp  rollingstocksqlmodel.h  rsmatchmodelfactory.cpp  rsmatchmodelfactory.h  rsmodelsmatchmodel.cpp  rsmodelsmatchmodel.h  rsmodelssqlmodel.cpp  rsmodelssqlmodel.h  rsownersmatchmodel.cpp  rsownersmatchmodel.h  rsownerssqlmodel.cpp  rsownerssqlmodel.h
src/searchbox/: CMakeLists.txt  searchresultevent.cpp  searchresultevent.h  searchresultitem.h  searchresultmodel.cpp  searchresultmodel.h  searchtask.cpp  searchtask.h
src/settings/: CMakeLists.txt  appsettings.cpp  appsettings.h  languagemodel.cpp  languagemodel.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  type_utils.h
src/shifts/: CMakeLists.txt  shiftcombomodel.cpp  shiftcombomodel.h  shiftitem.h  shiftjobsmodel.cpp  shiftjobsmodel.h  shiftmanager.cpp  shiftmanager.h  shiftresultevent.cpp  shiftresultevent.h  shiftsmodel.cpp  shiftsmodel.h  shiftsqlmodel.cpp  shiftsqlmodel.h  shiftviewer.cpp  shiftviewer.h
src/sqlconsole/: CMakeLists.txt  sqlconsole.cpp  sqlconsole.h  sqlresultmodel.cpp  sqlresultmodel.h  sqlviewer.cpp  sqlviewer.h
src/sqlite3pp/: CMakeLists.txt  sqlite3pp.h  sqlite3pp.ipp  sqlite3ppext.h  sqlite3ppext.ipp
src/stations/: CMakeLists.txt  railwaysegmentmatchmodel.h  station_name_utils.h  station_utils.h  stationgatesmatchmodel.cpp  stationgatesmatchmodel.h  stationsmatchmodel.cpp  stationsmatchmodel.h  stationssqlmodel.cpp  stationssqlmodel.h  stationtracksmatchmodel.cpp
src/translations/: CMakeLists.txt  mrtp_de.ts  mrtp_it.ts  traintimetable_de.ts  traintimetable_it.ts
src/utils/: CMakeLists.txt  checkproxymodel.cpp  checkproxymodel.h  colordelegate.h  colorview.cpp  colorview.h  combodelegate.cpp  combodelegate.h  directiontype.h  file_format_names.h  font_utils.h  jobcategorystrings.h  kmutils.cpp  languageutils.cpp  languageutils.h  model_mode.h  model_roles.h  openfileinfolder.cpp  openfileinfolder.h  owningqpointer.h  platform_utils.h  rs_types_names.h  rs_utils.cpp  rs_utils.h  session_rs_modes.h  singledepthtreemodelhelper.h  types.h  worker_event_types.h
src/viewmanager/: CMakeLists.txt  rsjobviewer.cpp  rsjobviewer.h  rsplanmodel.cpp  rsplanmodel.h  sessionstartendmodel.cpp  sessionstartendmodel.h  sessionstartendrsviewer.cpp  sessionstartendrsviewer.h  treemodel.cpp  treemodel.h  viewmanager.cpp  viewmanager.h
(+423 files in other folders)
